# markdown-reader

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.trellis/: .template-hashes.json
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-15-markdown-reader-v0-1/: task.json
.trellis/tasks/05-16-markdown-reader-v1-0-edit/: prd.md  task.json
.trellis/workspace/hbw/: journal-1.md
samples/: feature-showcase.md
scripts/: gen-placeholder-icons.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: data_dir.rs  file_watcher.rs  lib.rs  main.rs
src/assets/fonts/: README.md
src/components/ConfirmDialog/: ConfirmDialog.module.css  ConfirmDialog.tsx  useConfirm.ts
src/components/ContextMenu/: ContextMenu.module.css  ContextMenu.tsx  ContextMenuContext.tsx
src/components/DocumentView/: CodeBlock.module.css  CodeBlock.tsx  DocumentView.module.css  DocumentView.tsx  Frontmatter.module.css  Frontmatter.tsx  FrontmatterContext.tsx  ImageWithFallback.module.css  ImageWithFallback.tsx  documentActions.ts
src/hooks/: useDirtyGuard.ts  useDragDrop.ts  useFileWatcher.ts  usePrintMode.ts  useScrollMemory.ts  useShortcuts.ts  useWindowStatePersistence.ts
src/lib/: linkRouter.ts  logger.ts  markdownPlugins.ts  mermaidCache.ts  mermaidLazy.ts  parseFrontmatter.ts  pathUtils.ts  persistJson.ts  recentFiles.ts  rehypeMermaidPretag.ts  scrollPositions.ts  settings.ts  settingsStore.ts  singleInstance.ts  tauri.ts  userCss.ts  windowState.ts
src/styles/: fonts.css  global.css  print.css  theme.dark.css  theme.light.css  transitions.css
(+41 files in other folders)
