[package]
name = "markdown_reader"
version = "0.1.0"
description = "A Markdown reader with first-class Mermaid support"
authors = ["yuilona"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "markdown_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
