[package]
name = "markdown_reader"
version = "0.1.0"
description = "A Markdown reader with first-class Mermaid support"
authors = ["yuilona"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "markdown_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `protocol-asset` enables the `asset://` (Windows: `https://asset.localhost/`)
# URL scheme used by `convertFileSrc` for local image rendering (R6.1/R6.2).
# Without this feature, the tauri.conf.json `assetProtocol.enable: true`
# fails the build-time consistency check.
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# File watcher for R2.6 external auto-reload. Pinned to 6.x — the 7.x line
# changed the debouncer story significantly and we don't need it.
notify = "6"
